<resources>
    <string name="app_name">Snap 2 Pay</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">LOGIN</string>
    <string name="register">REGISTER</string>
    <string name="pay">2Pay</string>
    <string name="slogan">Receive Payments Faster Than Ever</string>
    <string name="snap2">Snap2Pay</string>
    <string name="OR">OR</string>
    <string name="LOGIN">login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="reg">Register</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="invalid_email">This email is invalid</string>
    <string name="invalid_password">password should not be less than 8</string>
    <string name="continue_to">CONTINUE</string>
    <string name="reg_with_google">Register With Google</string>
    <string name="tap">Tap camera icon to scan card.</string>
    <string name="verification_error">Email has not being verified. Check your email box to verify account.</string>
    <string name="image_provider">com.sanmiaderibigbe.snap2pay.android.fileprovider</string>
    <string name="text_extraction_error">Error card number could not be extracted. Try again.</string>
    <string name="camera_permision_error">Camera permission is needed to scan card.</string>
    <string name="name_error">Name can not be empty</string>
    <string name="account_number_error">Account number is invalid</string>
    <string name="bvn_error">BVN is invalid</string>
    <string name="bank_account_error">Bank account is invalid</string>
    <string name="email_error">Email is not valid.</string>
    <string name="phone_number_error">Phone number is not valid.</string>
    <string name="password_error">Password is not valid</string>
    <string name="password_not_the_same_error">Password is not the same.</string>
    <string name="amount_error">Amount is not valid</string>
    <string name="product_description_error">Production description is not valid</string>
    <string name="pin_error">Pin is not valid</string>
    <string name="ccv_error">CCV not valid</string>
    <string name="date_error">Date not valid</string>
    <string name="month_error">Month not valid</string>
    <string name="card_number_error">Card number is not valid.</string>
    <string name="personal_details">Personal Details</string>
    <string name="bank_details">Bank Details</string>
    <string name="settings">Settings</string>
    <string name="transaction_hist">Transaction History</string>
    <string name="log_out">Log Out</string>
    <string name="enter">ENTER</string>
    <string name="update">UPDATE</string>
</resources>
